# admissions

./: .babelrc  .coveragerc  .dockerignore  .drone.yml  .eslintrc  .eslintrc.js  .gitignore  .prettierignore  Dockerfile  LICENSE  Makefile  README.md  admissions.ini  committee-admissions.ini  cypress.config.ts  docker-compose.yml  jsconfig.json  knip.json  manage.py  package.json  pyproject.toml  server.js  setup.cfg  tox.ini  tsconfig.json  vite.config.js  vite.config.ts  webpack-stats.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: automerge-dev-deps.yml
admissions/: oauth.py  urls.py  wsgi.py
admissions/admissions/: apps.py  authentication.py  constants.py  factories.py  json_models.py  models.py  permissions.py  serializers.py  views.py
admissions/admissions/fields/: jsonschemaquestionfield.py  jsonschemaresponsefield.py
admissions/admissions/fixtures/: admission_group.json  admissions.json  committees.yaml  groups.json  memberships.json  sessions.json  users.json
admissions/admissions/migrations/: 0001_initial.py  0002_alter_legouser_first_name.py  0002_remove_membership_unique_user_group_combination_and_more.py  0003_alter_committee_logo.py  0003_alter_group_description_alter_group_response_label.py  0004_groupapplication_rename_committee_membership_group_and_more.py  0005_group_admissions.py  0006_admission_description.py  0007_admission_created_by_alter_admission_description_and_more.py  0008_admissiongroup_and_more.py  (+6 more)
admissions/assets/: manifest.json
admissions/settings/: __init__.py  base.py  development.py  example.env  logging.py  production.py  testing.py
admissions/templates/: base.html  base.txt  deleted_application.html  deleted_application.txt  index.html
admissions/utils/: email.py  models.py
committee_admissions/: oauth.py  urls.py  wsgi.py
committee_admissions/admissions/: apps.py  authentication.py  constants.py  factories.py  models.py  permissions.py  serializers.py  views.py
committee_admissions/functional_tests/: tests.py
committee_admissions/settings/: __init__.py  base.py  development.py  example.env  local.py  logging.py  production.py  testing.py
committee_admissions/templates/: index.html
committee_admissions/utils/: models.py  sentry.py
cypress/e2e/: landing_page_spec.cy.ts  submit_application_spec.cy.ts
cypress/support/: commands.ts  index.d.ts
frontend/public/: index.html
frontend/src/: global.d.ts  index.css  index.js  index.jsx  index.tsx  plswork.js  scrollToTop.jsx  scrollToTop.tsx  types.ts
requirements/: base.in  base.txt  coverage.txt  development.in  development.txt  isort.txt  production.in  production.txt  yapf.txt
(+372 files in other folders)
