[tool.poetry]
name = "admissions"
version = "0.1.0"
description = "Admission system for Abakus"
authors = ["Webkom <webkom@abakus.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
django-environ = "^0.11.2"
django-extensions = "^3.2.1"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.0.0"
django-vite = "^3.0.4"
social-auth-app-django = "^5.4.1"
psycopg2-binary = "^2.9.9"
ipython = "^8.18.1"
structlog = "^24.2.0"
sentry-sdk = "^2.5.1"
uwsgi = "^2.0.25"
premailer = "^3.10.0"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.2"
factory-boy = "^3.3.0"
tox = "^4.15.1"
isort = "^5.12.0"
black = "^24.4.2"
coverage = "^7.5.3"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core=1.4.0"]
build-backend = "poetry.core.masonry.api"
