[tool.poetry]
name = "admissions"
version = "0.1.0"
description = "Admission system for Abakus"
authors = ["Webkom <webkom@abakus.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
django-environ = "^0.12.0"
django-extensions = "^3.2.3"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
django-vite = "^3.0.6"
social-auth-app-django = "^5.4.2"
psycopg2-binary = "^2.9.10"
ipython = "^8.31.0"
structlog = "^25.1.0"
sentry-sdk = "^2.20.0"
uwsgi = "^2.0.28"
premailer = "^3.10.0"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.0.1"
factory-boy = "^3.3.1"
tox = "^4.24.1"
isort = "^5.13.2"
black = "^24.10.0"
coverage = "^7.6.10"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core=1.8.5"]
build-backend = "poetry.core.masonry.api"
